5.3/manifests/greeter-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: bachthyaglx/greeter:v1
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-1
spec:
  selector:
    app: greeter
    version: v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
