5.3/manifests/greeter-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: bachthyaglx/greeter:v2
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: greeter-svc-2
spec:
  selector:
    app: greeter
    version: v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
